--- a/_posts/2020-08-06-ullrich20a.md
+++ b/_posts/2020-08-06-ullrich20a.md
@@ -34,13 +34,14 @@ lastpage: 411
 page: 399-411
 order: 399
 cycles: false
-bibtex_author: Ullrich, Karen and {van den Berg}, Rianne and Brubaker, Marcus and
+bibtex_author: Ullrich, Karen and van den Berg, Rianne and Brubaker, Marcus and
   Fleet, David and Welling, Max
 author:
 - given: Karen
   family: Ullrich
 - given: Rianne
-  family: van den Berg
+  prefix: van den
+  family: Berg
 - given: Marcus
   family: Brubaker
 - given: David
