--- a/_posts/2020-08-06-patrini20a.md
+++ b/_posts/2020-08-06-patrini20a.md
@@ -29,14 +29,15 @@ lastpage: 743
 page: 733-743
 order: 733
 cycles: false
-bibtex_author: Patrini, Giorgio and {van den Berg}, Rianne and Forr{\'{e}}, Patrick
+bibtex_author: Patrini, Giorgio and van den Berg, Rianne and Forr{\'{e}}, Patrick
   and Carioni, Marcello and Bhargav, Samarth and Welling, Max and Genewein, Tim and
   Nielsen, Frank
 author:
 - given: Giorgio
   family: Patrini
 - given: Rianne
-  family: van den Berg
+  prefix: van den
+  family: Berg
 - given: Patrick
   family: Forré
 - given: Marcello
